# ray-tracing-challange

./: .gitignore  Cargo.toml
src/: camera.rs  light.rs  main.rs  material.rs  ray.rs  world.rs
src/canvas/: mod.rs
src/matrix/: mod.rs
src/objects/: mod.rs  plane.rs  sphere.rs
src/pattern/: checkers.rs  gradient.rs  mod.rs  ring.rs  stripe.rs
src/shape/: cube.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs
src/tuple/: mod.rs
