[package]
name = "ray-tracer-challange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
itertools = "0.11.0"
lazy_static = { version = "1.4.0", features = [] }
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.0"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
test-case = "3.2.1"
